Fixes the colour of text in input boxes in dark mode.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -208,7 +208,7 @@ button {
 }
 
 button.party {
-  border: 0px;
+  border: 0;
   padding: 0;
   background-color: inherit;
   font-size: inherit;
@@ -326,6 +326,7 @@ dialog::backdrop {
 
   pre, button, input {
     background-color: var(--background-color-main);
+    color: var(--standout-color-main);
   }
 
   code {
